Upgrade webrtc to M74 and 64bit support